probe(l5): L5UnsafeAccess — check in the sweep the ForkJoin residue rests on
§3 of the retired page says the primitives under the real ForkJoinPool are not
the cause of the doubled external submission. That was measured with an ad-hoc
file; this checks the measurement in, so the claim has an instrument behind it
that a future wave can re-run.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>